Fixing map on iPhone

--- a/_sass/sections/_venue-page.sass
+++ b/_sass/sections/_venue-page.sass
@@ -49,9 +49,11 @@
     .map
       text-align: right
       padding-right: 2em
+      overflow: hidden
 
       iframe
         min-width: 500px
+        max-width: 80%
         min-height: 400px
         max-height: 400px
 
